added fastclick js

--- a/test-contacts/index.html
+++ b/test-contacts/index.html
@@ -10,5 +10,6 @@
 <div ><pre id=contactInformation></pre></div>
 </body>
      <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+  <script type="text/javascript" charset="utf-8" src="fastclick.js"></script>
     <script type="text/javascript" charset="utf-8" src="app.js"></script>
     </html>
