--- a/test-contacts/index.html
+++ b/test-contacts/index.html
@@ -7,17 +7,7 @@
 </head>
 <body>
     
-<div id=header class="button button-block button-large">
-    <img align=left src=favicon-48x48.png>
-    Phonegap Contact Test
-    <button id=exitApp class="button button-pill button-primary button-medium">Exit</button>
-</div>
-
-<button id=hideButton class="button button-pill button-primary button-medium">Hide</button>
-
-<p class=clearBoth />
-
-<div id=deviceInformation></div>
+  <h3>Contact Information</h3>
 
 <hr />
 
@@ -25,9 +15,7 @@
 
 <hr />
 
-<div class="copyright">
-    <span id=copyright>Created by Jesus Monroy, Jr. &copy; 2015</span>
-</div>
+
 </body>
      <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
   <script type="text/javascript" charset="utf-8" src="fastclick.js"></script>
