added camera link

--- a/test-contacts/index.html
+++ b/test-contacts/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-  <h3>Contact Information</h3>
-
+  <h3>Contact Information</h3><br>
+  <a href="camera.html"><button>Camera</button></a>
 <hr />
 
 <div ><pre id=contactInformation></pre></div>
